# genshin-wiki

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: spider.yml
model/: _base.py  avatar.py  enums.py  item.py  other.py
model/avatar/: __init__.py  _avatar.py  _talente.py
models/: avatar.py  enums.py  item.py
old/script/: item.py
old/scripts/: avatar.py  item.py
old/src/genshin_wiki_py/: config.py  enums.py  manager.py
old/src/genshin_wiki_py/item/: __init__.py  _item.py  cook.py
old/src/models/: _base.py  other.py
old/src/models/avatar/: __init__.py  _avatar.py  talente.py
old/src/models/item/: __init__.py  _item.py  cook.py
old/src/tools/: const.py  manager.py
old/src/utils/: funcs.py  manager.py  model.py
old/test/model/: _base.py  enums.py  item.py
old/test/model/avatar/: _avatar.py
old/test/scripts/: _base.py  avatar.py  item.py
scripts/: avatar.py  item.py
src/genshin/wiki/: _mode.py  config.py  manager.py
src/genshin/wiki/_database/: _mode.py  item.py
src/genshin/wiki/tools/: const.py  typedefs.py
src/genshin/wiki/utils/: __init__.py  funcs.py  net.py
utils/: const.py  context.py  funcs.py  json.py  manager.py  single.py  text.py  typedefs.py
