[tool.poetry]
name = "genshinwikidataparser"
version = "0.1.0"
description = "原神 wiki 数据解析库"
authors = ["Karako <karakohear@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ujson = "^5.7.0"
orjson = "^3.8.8"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.6"}
aiofiles = "^23.1.0"
regex = "^2022.10.31"
pyhumps = "^3.8.0"
httpx = {extras = ["http2"], version = "^0.23.3"}
arko-wrapper = "^0.2.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
