[project]
name = "genshin-wiki-py"
version = "0.1.0"
description = "Pydantic Genshin Impact Wiki API Wrapper"
authors = [
    { name = "Karako", email = "karakohear@gmail.com" },
]
dependencies = [
    "ujson<6.0.0,>=5.7.0",
    "orjson<4.0.0,>=3.8.8",
    "aiohttp[speedups]<4.0.0,>=3.8.4",
    "aiofiles<24.0.0,>=23.1.0",
    "regex<2023.0.0,>=2022.10.31",
    "arko-wrapper<1.0.0,>=0.2.8",
    "peewee>=3.16.3",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "Cython>=3.0.1",
    "apsw>=3.43.0.0",
    "gevent>=23.7.0",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
sqlite = []

[tool.pdm.build]
includes = ["genshin_wiki_py", "pyproject.toml", "README.md", "LICENSE"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

